Adjust color contrast. Fix margins for when all accordions open. Start js.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -26,7 +26,6 @@ p {
 body {
   background: $color-bg-primary;
   font-family: $font-family--primary;
-  margin-top: 2.5rem;
 }
 
 h1 {
